--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,3 +1,4 @@
-# English strings go here for Rails i18n
 en:
-  # my_label: "My label"
+   permission_copy_project: Copy project
+   error_project_already_exists: "Identifier has already"
+   notice_project_copied: "Successfully completed copy"
